--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ address a:focus,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/slogan-img.jpg");
+    url("../images/slogan-img.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 1600px auto;
