--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,8 @@ h5 {
   letter-spacing: 0.02em;
 }
 .mail-tel-a:hover,
-.mail-tel-a:focus, address a:hover,
+.mail-tel-a:focus,
+address a:hover,
 address a:focus,
 .head-clickers a:hover,
 .head-clickers a:focus {
@@ -182,7 +183,7 @@ address a:focus,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/slogan-img.jpg");
+    url("../images/slogan-img.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 1600px auto;
