--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ address a:focus,
 }
 .mail-tel-a {
   display: flex;
+  align-items: center;
   color: var(--gery-text);
   font-weight: 500;
   font-size: 14px;
@@ -178,7 +179,6 @@ address a:focus,
 
 /* ====================== SLOGAN ================= */
 .slogan {
-  background-color: var(--slogan-background);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -291,7 +291,6 @@ address a:focus,
   width: 44px;
   height: 44px;
   border-radius: 50px;
-  cursor: pointer;
   fill: #afb1b8;
 }
 .round-social-links:hover,
@@ -373,7 +372,6 @@ address a {
   width: 44px;
   height: 44px;
   border-radius: 50px;
-  cursor: pointer;
   fill: var(--main-white);
 }
 .round-join-us-links:hover,
@@ -445,6 +443,7 @@ address a {
   border-bottom: 1px solid #eeeeee;
 }
 .portfolio-box figure:hover {
+  cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
